[gd_scene load_steps=10 format=3 uid="uid://c7orqndgslsdv"]

[ext_resource type="Script" uid="uid://dhdrj42qeklt7" path="res://Work/WorkController.gd" id="1_efasj"]
[ext_resource type="Script" uid="uid://bu5bal6bbm8dn" path="res://Work/clock.gd" id="2_3wvif"]
[ext_resource type="Script" uid="uid://ouxedtqym3rp" path="res://Work/Animations.gd" id="2_d8cx6"]
[ext_resource type="Texture2D" uid="uid://c7ecxux7xtje8" path="res://Assets/Images/TempTorrN.jpg" id="2_i3hxq"]
[ext_resource type="Script" uid="uid://ditn1fmyebwaw" path="res://Work/Bribe.gd" id="4_pnja2"]

[sub_resource type="Animation" id="Animation_7ml6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-140, 192)]
}

[sub_resource type="Animation" id="Animation_b8fcm"]
resource_name = "Slide_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-140, 192), Vector2(30, 192)]
}

[sub_resource type="Animation" id="Animation_5ocmi"]
resource_name = "Slide_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(30, 192), Vector2(-140, 192)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cpjbh"]
_data = {
&"RESET": SubResource("Animation_7ml6k"),
&"Slide_in": SubResource("Animation_b8fcm"),
&"Slide_out": SubResource("Animation_5ocmi")
}

[node name="WorkScreen" type="Node2D"]
script = ExtResource("1_efasj")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0.435294, 0.733333, 1)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../stats")
libraries = {
&"": SubResource("AnimationLibrary_cpjbh")
}
script = ExtResource("2_d8cx6")

[node name="stats" type="Panel" parent="."]
offset_left = -140.0
offset_top = 192.0
offset_right = -12.0
offset_bottom = 416.0

[node name="Label" type="Label" parent="stats"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 216.0
text = "Health:

Hunger:

Security:

Debt:"

[node name="Taskbar" type="Panel" parent="."]
offset_top = 600.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="NumberPad" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "Num"

[node name="FileManager" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 192.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 40.0
rotation = 0.00132338
theme_override_font_sizes/font_size = 12
text = "Files"

[node name="Messenger" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 960.0
offset_top = 8.0
offset_right = 1024.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "MSG"

[node name="Requests" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 320.0
offset_top = 8.0
offset_right = 384.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "MEMO"

[node name="Buttons" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 448.0
offset_top = 8.0
offset_right = 512.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "Button"

[node name="Header" type="Panel" parent="."]
offset_right = 2304.0
offset_bottom = 80.0
scale = Vector2(0.5, 0.5)

[node name="Clock" type="Panel" parent="Header"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 80.0
script = ExtResource("2_3wvif")

[node name="Label" type="Label" parent="Header/Clock"]
layout_mode = 0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 20
text = "Date: today
Time: N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectiveText" type="Label" parent="Header"]
layout_mode = 0
offset_left = 784.0
offset_top = 8.0
offset_right = 1536.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 20
text = "Current Objetive:
Tasks Left:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Header"]
layout_mode = 0
offset_left = 2000.0
offset_top = 8.0
offset_right = 2160.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 20
text = "Money:
Falures:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(64, 96)
scale = Vector2(0.3, 0.26)
texture = ExtResource("2_i3hxq")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[node name="GoHome" type="Button" parent="."]
visible = false
offset_left = 8.0
offset_top = 152.0
offset_right = 120.0
offset_bottom = 200.0
text = "Go Home"

[node name="Bribe" type="Panel" parent="."]
visible = false
offset_left = 888.0
offset_top = 64.0
offset_right = 1080.0
offset_bottom = 192.0
script = ExtResource("4_pnja2")

[node name="Label" type="Label" parent="Bribe"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 32.0
text = "Bribe Available"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="Bribe"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 88.0
offset_bottom = 64.0
text = "Value: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Risk" type="Label" parent="Bribe"]
layout_mode = 0
offset_left = 112.0
offset_top = 32.0
offset_right = 186.0
offset_bottom = 64.0
text = "Risk: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Accept" type="Button" parent="Bribe"]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 88.0
offset_bottom = 120.0
text = "Accept"

[node name="Decline" type="Button" parent="Bribe"]
layout_mode = 0
offset_left = 112.0
offset_top = 72.0
offset_right = 186.0
offset_bottom = 120.0
text = "Decline"

[connection signal="pressed" from="Taskbar/NumberPad" to="." method="DisplayNumpad"]
[connection signal="pressed" from="Taskbar/FileManager" to="." method="DisplayFileManager"]
[connection signal="pressed" from="Taskbar/Messenger" to="." method="DisplayMessages"]
[connection signal="pressed" from="Taskbar/Requests" to="." method="DisplayRequest"]
[connection signal="pressed" from="Taskbar/Buttons" to="." method="DisplayButtons"]
[connection signal="pressed" from="GoHome" to="." method="GoHome"]
[connection signal="pressed" from="Bribe/Accept" to="Bribe" method="AcceptBribe"]
[connection signal="pressed" from="Bribe/Decline" to="Bribe" method="DeclineBribe"]
